refactor(boulder): 优化巨石实体渲染和碰撞检测逻辑
- 在AbstractBoulderRenderer中添加实体尺寸获取以改进渲染精度
- 修复BoulderEntity中的移除逻辑顺序问题
- 优化BoulderCannonBlockEntity的角度控制算法减少不必要的运算
- 改进BoulderEntity的碰撞检测精度和性能表现
- 重构CamouflagedBoulderBlock的各种形状和属性代理方法
- 优化BouncyBoulderEntity的反弹和音效处理逻辑
- 统一BlockState空值检查和默认状态处理机制